2006-09-14  Adam Schreiber  <sadam@clemson.edu>

    * data/seahorse/schemas.in: Enabled key sharing by default.
    Fixes #355378

2006-09-13  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-prefs-cache.c: Don't overwrite ttl value 
    before reading it out properly. Fixes #355833
    
2006-09-13  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.glade: Use GtkStatusbar instead of 
    GnomeAppbar
    * src/seahorse-keyserver-results.glade: Use better labels, suggested
    by usability review.
    * src/seahorse-generate-select.glade: Fix conflicting mnemonics.
    * src/seahorse-pgp-private-key-properties.glade: Simplify tab heading
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-ssh-askpass.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c:
    * src/seahorse-generate-select.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-upload.c: Change SSH to Secure Shell as suggested by 
    Alan Horkan.
    
2006-09-12  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * src/Makefile.am: distcheck fix for new desktop.in.in files
    * NEWS:
    * README: Version 0.9.5
    * configure.in: Update version number

2006-09-11  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Allow building with gedit 2.16. Patch from Sebastian Dröge
    Fixes #355420

2006-09-10  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-source.c: Add new line at the end of exported 
    SSH public keys.
    
2006-09-10  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/tests/Makefile.am: Add define so tests build