@@ -1,3 +1,10 @@
+2006-09-14  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libcryptui/cryptui-keyset.c:
+    * libseahorse/seahorse-util.c:
+    * plugins/nautilus/seahorse-tool.c: Fixed crasher when signing using 
+    seahorse-tool. Fixes #355723
+    
 2006-09-14  Adam Schreiber  <sadam@clemson.edu>
 
     * data/seahorse/schemas.in: Enabled key sharing by default.
